--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,5 +174,39 @@
     "retailerSidebar_myOrders": "My Orders",
     "retailerSidebar_recommendedDeals": "Recommended Deals",
     "retailerSidebar_payments": "Payments",
-    "retailerSidebar_favorites": "Favorites"
+    "retailerSidebar_favorites": "Favorites",
+    "dashboard_goToPage": "Go to page",
+    "farmerDashboard_title": "Farmer Dashboard",
+    "farmerDashboard_description": "Welcome back! Here's an overview of your farming activities.",
+    "farmerDashboard_myProduceListings": "My Produce Listings",
+    "farmerDashboard_aiPriceAdvisor": "AI Price Advisor",
+    "farmerDashboard_marketPriceSuggestions": "Market Price Suggestions",
+    "farmerDashboard_agriAssistant": "Agri-Assistant",
+    "farmerDashboard_dailyMarketPrices": "Daily Market Prices",
+    "farmerDashboard_ordersReceived": "Orders Received",
+    "farmerDashboard_paymentsEarnings": "Payments & Earnings",
+    "farmerDashboard_alerts": "Alerts",
+    "retailerDashboard_title": "Retailer Dashboard",
+    "retailerDashboard_description": "Welcome! Find the freshest produce from local farmers.",
+    "retailerDashboard_browseProduce": "Browse Produce",
+    "retailerDashboard_myOrders": "My Orders",
+    "retailerDashboard_recommendedDeals": "Recommended Deals",
+    "retailerDashboard_payments": "Payments",
+    "retailerDashboard_favorites": "Favorites",
+    "marketDashboard_title": "Local Market Dashboard",
+    "marketDashboard_description": "Welcome! Here's an overview of your market's performance.",
+    "marketDashboard_marketOverview": "Market Overview",
+    "marketDashboard_farmerParticipation": "Farmer Participation",
+    "marketDashboard_retailerActivity": "Retailer Activity",
+    "marketDashboard_logisticsSnapshot": "Logistics Snapshot",
+    "marketDashboard_revenuePayments": "Revenue & Payments",
+    "marketDashboard_alerts": "Alerts",
+    "adminDashboard_title": "Admin Dashboard",
+    "adminDashboard_description": "Welcome, Admin. Here's a summary of the platform's status.",
+    "adminDashboard_userManagement": "User Management",
+    "adminDashboard_transactions": "Transactions",
+    "adminDashboard_analytics": "Analytics",
+    "adminDashboard_complaints": "Complaints",
+    "adminDashboard_contactMessages": "Contact Messages",
+    "adminDashboard_systemHealth": "System Health"
 }
