--- a/src/locales/pa.json
+++ b/src/locales/pa.json
@@ -174,5 +174,39 @@
     "retailerSidebar_myOrders": "ਮੇਰੇ ਆਰਡਰ",
     "retailerSidebar_recommendedDeals": "ਸਿਫਾਰਸ਼ੀ ਸੌਦੇ",
     "retailerSidebar_payments": "ਭੁਗਤਾਨ",
-    "retailerSidebar_favorites": "ਪਸੰਦੀਦਾ"
+    "retailerSidebar_favorites": "ਪਸੰਦੀਦਾ",
+    "dashboard_goToPage": "ਪੇਜ 'ਤੇ ਜਾਓ",
+    "farmerDashboard_title": "ਕਿਸਾਨ ਡੈਸ਼ਬੋਰਡ",
+    "farmerDashboard_description": "ਵਾਪਸੀ 'ਤੇ ਸੁਆਗਤ ਹੈ! ਇੱਥੇ ਤੁਹਾਡੀਆਂ ਖੇਤੀ ਗਤੀਵਿਧੀਆਂ ਦਾ ਸੰਖੇਪ ਜਾਣਕਾਰੀ ਹੈ।",
+    "farmerDashboard_myProduceListings": "ਮੇਰੀ ਉਪਜ ਸੂਚੀ",
+    "farmerDashboard_aiPriceAdvisor": "ਏਆਈ ਮੁੱਲ ਸਲਾਹਕਾਰ",
+    "farmerDashboard_marketPriceSuggestions": "ਬਾਜ਼ਾਰ ਮੁੱਲ ਸੁਝਾਅ",
+    "farmerDashboard_agriAssistant": "ਐਗਰੀ-ਸਹਾਇਕ",
+    "farmerDashboard_dailyMarketPrices": "ਰੋਜ਼ਾਨਾ ਬਾਜ਼ਾਰ ਦੀਆਂ ਕੀਮਤਾਂ",
+    "farmerDashboard_ordersReceived": "ਪ੍ਰਾਪਤ ਆਰਡਰ",
+    "farmerDashboard_paymentsEarnings": "ਭੁਗਤਾਨ ਅਤੇ ਕਮਾਈ",
+    "farmerDashboard_alerts": "ਚੇਤਾਵਨੀਆਂ",
+    "retailerDashboard_title": "ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾ ਡੈਸ਼ਬੋਰਡ",
+    "retailerDashboard_description": "ਸੁਆਗਤ ਹੈ! ਸਥਾਨਕ ਕਿਸਾਨਾਂ ਤੋਂ ਸਭ ਤੋਂ ਤਾਜ਼ਾ ਉਪਜ ਲੱਭੋ।",
+    "retailerDashboard_browseProduce": "ਉਪਜ ਬ੍ਰਾਊਜ਼ ਕਰੋ",
+    "retailerDashboard_myOrders": "ਮੇਰੇ ਆਰਡਰ",
+    "retailerDashboard_recommendedDeals": "ਸਿਫਾਰਸ਼ੀ ਸੌਦੇ",
+    "retailerDashboard_payments": "ਭੁਗਤਾਨ",
+    "retailerDashboard_favorites": "ਪਸੰਦੀਦਾ",
+    "marketDashboard_title": "ਸਥਾਨਕ ਮਾਰਕੀਟ ਡੈਸ਼ਬੋਰਡ",
+    "marketDashboard_description": "ਸੁਆਗਤ ਹੈ! ਇੱਥੇ ਤੁਹਾਡੇ ਬਾਜ਼ਾਰ ਦੇ ਪ੍ਰਦਰਸ਼ਨ ਦਾ ਸੰਖੇਪ ਜਾਣਕਾਰੀ ਹੈ।",
+    "marketDashboard_marketOverview": "ਬਾਜ਼ਾਰ ਦੀ ਸੰਖੇਪ ਜਾਣਕਾਰੀ",
+    "marketDashboard_farmerParticipation": "ਕਿਸਾਨ ਭਾਗੀਦਾਰੀ",
+    "marketDashboard_retailerActivity": "ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾ ਗਤੀਵਿਧੀ",
+    "marketDashboard_logisticsSnapshot": "ਲੌਜਿਸਟਿਕਸ ਸਨੈਪਸ਼ਾਟ",
+    "marketDashboard_revenuePayments": "ਮਾਲੀਆ ਅਤੇ ਭੁਗਤਾਨ",
+    "marketDashboard_alerts": "ਚੇਤਾਵਨੀਆਂ",
+    "adminDashboard_title": "ਐਡਮਿਨ ਡੈਸ਼ਬੋਰਡ",
+    "adminDashboard_description": "ਸੁਆਗਤ ਹੈ, ਐਡਮਿਨ। ਇੱਥੇ ਪਲੇਟਫਾਰਮ ਦੀ ਸਥਿਤੀ ਦਾ ਸਾਰਾਂਸ਼ ਹੈ।",
+    "adminDashboard_userManagement": "ਉਪਭੋਗਤਾ ਪ੍ਰਬੰਧਨ",
+    "adminDashboard_transactions": "ਲੈਣ-ਦੇਣ",
+    "adminDashboard_analytics": "ਵਿਸ਼ਲੇਸ਼ਣ",
+    "adminDashboard_complaints": "ਸ਼ਿਕਾਇਤਾਂ",
+    "adminDashboard_contactMessages": "ਸੰਪਰਕ ਸੁਨੇਹੇ",
+    "adminDashboard_systemHealth": "ਸਿਸਟਮ ਸਿਹਤ"
 }
