--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -174,5 +174,39 @@
     "retailerSidebar_myOrders": "मेरे आदेश",
     "retailerSidebar_recommendedDeals": "अनुशंसित सौदे",
     "retailerSidebar_payments": "भुगतान",
-    "retailerSidebar_favorites": "पसंदीदा"
+    "retailerSidebar_favorites": "पसंदीदा",
+    "dashboard_goToPage": "पेज पर जाएं",
+    "farmerDashboard_title": "किसान डैशबोर्ड",
+    "farmerDashboard_description": "वापसी पर स्वागत है! यहां आपकी खेती की गतिविधियों का अवलोकन है।",
+    "farmerDashboard_myProduceListings": "मेरी उपज सूची",
+    "farmerDashboard_aiPriceAdvisor": "एआई मूल्य सलाहकार",
+    "farmerDashboard_marketPriceSuggestions": "बाजार मूल्य सुझाव",
+    "farmerDashboard_agriAssistant": "कृषि-सहायक",
+    "farmerDashboard_dailyMarketPrices": "दैनिक बाजार मूल्य",
+    "farmerDashboard_ordersReceived": "प्राप्त आदेश",
+    "farmerDashboard_paymentsEarnings": "भुगतान और कमाई",
+    "farmerDashboard_alerts": "अलर्ट",
+    "retailerDashboard_title": "खुदरा विक्रेता डैशबोर्ड",
+    "retailerDashboard_description": "स्वागत है! स्थानीय किसानों से सबसे ताज़ी उपज प्राप्त करें।",
+    "retailerDashboard_browseProduce": "उपज ब्राउज़ करें",
+    "retailerDashboard_myOrders": "मेरे आदेश",
+    "retailerDashboard_recommendedDeals": "अनुशंसित सौदे",
+    "retailerDashboard_payments": "भुगतान",
+    "retailerDashboard_favorites": "पसंदीदा",
+    "marketDashboard_title": "स्थानीय बाजार डैशबोर्ड",
+    "marketDashboard_description": "स्वागत है! यहां आपके बाजार के प्रदर्शन का अवलोकन है।",
+    "marketDashboard_marketOverview": "बाजार अवलोकन",
+    "marketDashboard_farmerParticipation": "किसान भागीदारी",
+    "marketDashboard_retailerActivity": "खुदरा विक्रेता गतिविधि",
+    "marketDashboard_logisticsSnapshot": "लॉजिस्टिक्स स्नैपशॉट",
+    "marketDashboard_revenuePayments": "राजस्व और भुगतान",
+    "marketDashboard_alerts": "अलर्ट",
+    "adminDashboard_title": "एडमिन डैशबोर्ड",
+    "adminDashboard_description": "स्वागत है, एडमिन। यहां प्लेटफ़ॉर्म की स्थिति का सारांश है।",
+    "adminDashboard_userManagement": "उपयोगकर्ता प्रबंधन",
+    "adminDashboard_transactions": "लेन-देन",
+    "adminDashboard_analytics": "विश्लेषिकी",
+    "adminDashboard_complaints": "शिकायतें",
+    "adminDashboard_contactMessages": "संपर्क संदेश",
+    "adminDashboard_systemHealth": "सिस्टम स्वास्थ्य"
 }
