--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,3 +1,4 @@
+
 {
   "features": "विशेषताएँ",
   "portals": "पोर्टल",
@@ -5,45 +6,45 @@
   "heroSubtitle": "एआई-संचालित कृषि बाज़ार",
   "heroTitle": "खेतों को बाज़ारों से जोड़ना, निर्बाध रूप से।",
   "heroDescription": "फार्मलिंक एक ऑल-इन-वन प्लेटफॉर्म है जो किसानों, खुदरा विक्रेताओं और स्थानीय बाजारों को अधिक कुशल और निष्पक्ष कृषि पारिस्थितिकी तंत्र के लिए एआई-संचालित अंतर्दृष्टि के साथ सशक्त बनाता है।",
-  "getStarted": "शुरू हो जाओ",
+  "getStarted": "शुरू करें",
   "learnMore": " और जानें",
   "featuresTitle": "व्यापार करने का एक बेहतर तरीका",
-  "featuresDescription": "हमारे शक्तिशाली एआई उपकरण और पारदर्शी बाज़ार आपको prospérer करने के लिए आवश्यक सब कुछ प्रदान करते हैं।",
+  "featuresDescription": "हमारे शक्तिशाली एआई उपकरण और पारदर्शी बाज़ार आपको समृद्ध होने के लिए आवश्यक सब कुछ प्रदान करते हैं।",
   "aiPriceAdvisor": "एआई मूल्य सलाहकार",
-  "featurePriceAdvisorDesc": "गुणवत्ता और वास्तविक समय के बाजार डेटा के आधार पर अपनी उपज के लिए उचित मूल्य பரிந்துराएँ प्राप्त करने के लिए एआई का लाभ उठाएं।",
+  "featurePriceAdvisorDesc": "गुणवत्ता और वास्तविक समय के बाजार डेटा के आधार पर अपनी उपज के लिए उचित मूल्य सिफारिशें प्राप्त करने के लिए एआई का लाभ उठाएं।",
   "realTimeMarketData": "वास्तविक समय बाजार डेटा",
-  "featureMarketDataDesc": "सूचित बिक्री और खरीद निर्णय लेने के लिए अप-टू-द-मिनट बाजार कीमतों और प्रवृत्तियों तक पहुंचें।",
+  "featureMarketDataDesc": "सूचित बिक्री और खरीद निर्णय लेने के लिए नवीनतम बाजार कीमतों और प्रवृत्तियों तक पहुंचें।",
   "supplyChainOptimization": "आपूर्ति श्रृंखला अनुकूलन",
-  "featureSupplyChainDesc": "हमारा एआई कचरे को कम करने के लिए सबसे कुशल वितरण रणनीतियों की பரிந்துरा करने के लिए आपूर्ति और मांग का विश्लेषण करता है।",
+  "featureSupplyChainDesc": "हमारा एआई बर्बादी को कम करने के लिए सबसे कुशल वितरण रणनीतियों की सिफारिश करने के लिए आपूर्ति और मांग का विश्लेषण करता है।",
   "personalizedDeals": "व्यक्तिगत सौदे",
-  "featurePersonalizedDealsDesc": "खुदरा विक्रेताओं को उनके खरीद इतिहास के आधार पर सर्वोत्तम सौदों के लिए एआई-संचालित பரிந்துराएँ प्राप्त होती हैं।",
+  "featurePersonalizedDealsDesc": "खुदरा विक्रेताओं को उनके खरीद इतिहास के आधार पर सर्वोत्तम सौदों के लिए एआई-संचालित सिफारिशें प्राप्त होती हैं।",
   "directConnections": "सीधे कनेक्शन",
   "featureDirectConnectionsDesc": "एक पारदर्शी बाज़ार जो किसानों को सीधे खुदरा विक्रेताओं और स्थानीय बाजारों से जोड़ता है, समुदाय को बढ़ावा देता है।",
-"aiPoweredAssistants": "एआई-संचालित सहायक",
-  "featureAIAssistantsDesc": "हमारे प्लेटफॉर्म-व्यापी FAQ बॉट और किसानों के लिए विशेष कृषि-सहायक के ساتھ اپنے سوالوں کے فوری جوابات حاصل کریں۔",
+  "aiPoweredAssistants": "एआई-संचालित सहायक",
+  "featureAIAssistantsDesc": "हमारे प्लेटफॉर्म-व्यापी FAQ बॉट और किसानों के लिए विशेष कृषि-सहायक के साथ अपने सवालों के तुरंत जवाब पाएं।",
   "aiPoweredAssistance": "एआई-संचालित सहायता",
   "aiShowcaseTitle": "आपका कृषि विशेषज्ञ यहाँ है, 24/7",
-  "aiShowcaseDesc": "फार्मलिंक فوری सहायता और विशेषज्ञ सलाह प्रदान करने के लिए अत्याधुनिक एआई को एकीकृत करता है। चाहे आप फसल सलाह की आवश्यकता वाले किसान हों या प्लेटफॉर्म کی खोज کرنے والے نئے صارف ہوں, हमारे एआई सहायक मदद करने के लिए यहाँ हैं।",
+  "aiShowcaseDesc": "फार्मलिंक तत्काल सहायता और विशेषज्ञ सलाह प्रदान करने के लिए अत्याधुनिक एआई को एकीकृत करता है। चाहे आप फसल सलाह की आवश्यकता वाले किसान हों या प्लेटफॉर्म की खोज करने वाले नए उपयोगकर्ता हों, हमारे एआई सहायक मदद करने के लिए यहाँ हैं।",
   "agriAssistant": "कृषि-सहायक",
   "agriAssistantDesc": "कीट नियंत्रण से लेकर बाजार के रुझान तक, अपने खेती के सवालों के विशेषज्ञ उत्तर प्राप्त करें।",
   "platformFaqBot": "प्लेटफॉर्म FAQ बॉट",
-  "platformFaqBotDesc": "क्या किसी सुविधा کے بارے میں कोई سوال ہے? हमारा FAQ बॉट فوری جوابات فراہم کرتا ہے۔",
+  "platformFaqBotDesc": "क्या किसी सुविधा के बारे में कोई सवाल है? हमारा FAQ बॉट तत्काल जवाब प्रदान करता है।",
   "askAboutCrops": "अपनी फसलों के बारे में एक सवाल पूछें...",
-  "agriAssistantInitialMessage": "नमस्ते! आपका कृषि विशेषज्ञ यहाँ है, 24/7। मुझसे اپنی फसलों کے बारे में पूछیں।",
+  "agriAssistantInitialMessage": "नमस्ते! आपका कृषि विशेषज्ञ यहाँ है, 24/7। मुझसे अपनी फसलों के बारे में पूछें।",
   "howItWorksTitle": "3 आसान चरणों में शुरू करें",
-  "howItWorksDesc": "हमारे नेटवर्क में शामिल होना सरल اور تیز ہے۔",
+  "howItWorksDesc": "हमारे नेटवर्क में शामिल होना सरल और तेज़ है।",
   "howItWorksStep1Title": "एक खाता बनाएं",
-  "howItWorksStep1Desc": "अपना पोर्टल चुनें और किसान, खुदरा विक्रेता, या बाजार प्रबंधक کے रूप में पंजीकरण करें।",
+  "howItWorksStep1Desc": "अपना पोर्टल चुनें और किसान, खुदरा विक्रेता, या बाजार प्रबंधक के रूप में पंजीकरण करें।",
   "howItWorksStep2Title": "अपने डैशबोर्ड का अन्वेषण करें",
-  "howItWorksStep2Desc": "अपनी भूमिका के अनुरूप शक्तिशाली उपकरणों तक पहुंचें, उपज کی सूची سے लेकर डेटा کا تجزیہ کرنے تک।",
+  "howItWorksStep2Desc": "अपनी भूमिका के अनुरूप शक्तिशाली उपकरणों तक पहुंचें, उपज की सूची से लेकर डेटा का विश्लेषण करने तक।",
   "howItWorksStep3Title": "लेन-देन शुरू करें",
-  "howItWorksStep3Desc": "भागीदारों کے ساتھ جڑیں, बिक्री کریں, ऑर्डर दें, और اپنے کاروبار کو بڑھائیں۔",
+  "howItWorksStep3Desc": "भागीदारों के साथ जुड़ें, बिक्री करें, ऑर्डर दें, और अपने कारोबार को बढ़ाएं।",
   "testimonialsTitle": "समुदाय द्वारा विश्वसनीय",
   "testimonial1Quote": "फार्मलिंक ने मेरे उपज बेचने के तरीके में क्रांति ला दी है। एआई मूल्य सलाहकार मुझे हर बार सर्वोत्तम मूल्य प्राप्त करने में मदद करता है।",
   "testimonial1Role": "किसान, गुजरात",
-  "testimonial2Quote": "उच्च गुणवत्ता वाली, स्थानीय उपज खोजना इतना आसान कभी नहीं रहा। பரிந்துરા کردہ सौदे मेरे समय اور پیسے بچاتے ہیں۔",
+  "testimonial2Quote": "उच्च गुणवत्ता वाली, स्थानीय उपज खोजना इतना आसान कभी नहीं रहा। सिफारिश किए गए सौदे मेरे समय और पैसे बचाते हैं।",
   "testimonial2Role": "खुदरा विक्रेता, मुंबई",
-  "testimonial3Quote": "कृषि-सहायक चैटबॉट अविश्वसनीय है। यह 24/7 मेरी जेब में ایک खेती विशेषज्ञ ہونے جیسا ہے۔ مجھے हर چیز پر فوری सलाह ملتی ہے۔",
+  "testimonial3Quote": "कृषि-सहायक चैटबॉट अविश्वसनीय है। यह 24/7 मेरी जेब में एक खेती विशेषज्ञ होने जैसा है। मुझे हर चीज़ पर तत्काल सलाह मिलती है।",
   "testimonial3Role": "किसान, पुणे",
   "getInTouch": "संपर्क में रहें",
   "getInTouchDesc": "क्या आपके कोई प्रश्न या प्रतिक्रिया है? हमें आपसे सुनना अच्छा लगेगा।",
@@ -55,24 +56,24 @@
   "message": "संदेश",
   "yourMessage": "आपका संदेश...",
   "error": "त्रुटि",
-  "sending": "भेज रहा है...",
+  "sending": "भेजा जा रहा है...",
   "sendMessage": "संदेश भेजें",
   "messageSent": "संदेश भेजा गया!",
   "messageSentDesc": "आपकी प्रतिक्रिया के लिए धन्यवाद। हम जल्द ही आपसे संपर्क करेंगे।",
   "chooseYourPortal": "अपना पोर्टल चुनें",
-  "chooseYourPortalDesc": "लॉग इन करने या खाता बनाने کے लिए اپنی भूमिका से मेल खाने वाला पोर्टल चुनें।",
+  "chooseYourPortalDesc": "लॉग इन करने या खाता बनाने के लिए अपनी भूमिका से मेल खाने वाला पोर्टल चुनें।",
   "farmerPortal": "किसान पोर्टल",
-  "farmerPortalDesc": "अपनी उपज کا انتظام کریں, कमाई کو ٹریک کریں, और बाजारों سے جڑیں۔",
+  "farmerPortalDesc": "अपनी उपज का प्रबंधन करें, कमाई को ट्रैक करें, और बाजारों से जुड़ें।",
   "retailerPortal": "खुदरा विक्रेता पोर्टल",
-  "retailerPortalDesc": "उपज ब्राउज़ करें, ऑर्डर दें, اور نئے مقامی سپلائرز کی खोज کریں۔",
+  "retailerPortalDesc": "उपज ब्राउज़ करें, ऑर्डर दें, और नए स्थानीय आपूर्तिकर्ताओं की खोज करें।",
   "marketPortal": "बाजार पोर्टल",
-  "marketPortalDesc": "बाजार संचालन, भागीदारी, और रसद کی نگرانی کریں۔",
-  "adminPortal": "व्यवस्थापक पोर्टल",
+  "marketPortalDesc": "बाजार संचालन, भागीदारी, और रसद की निगरानी करें।",
+  "adminPortal": "एडमिन पोर्टल",
   "adminPortalDesc": "सिस्टम प्रशासन, उपयोगकर्ता प्रबंधन, और एनालिटिक्स।",
   "login": "लॉग इन करें",
   "farmLinkFaq": "फार्मलिंक FAQ",
-  "askAboutFarmLink": "फार्मलि-nk सुविधाओं کے بارے میں पूछیں...",
-  "faqBotInitialMessage": "नमस्ते! मैं आज फार्मलिंक کے بارے में जानने میں آپ کی nasıl مدد कर सकता हूँ?",
+  "askAboutFarmLink": "फार्मलिंक सुविधाओं के बारे में पूछें...",
+  "faqBotInitialMessage": "नमस्ते! मैं आज फार्मलिंक के बारे में जानने में आपकी कैसे मदद कर सकता हूँ?",
   "navigation": "नेविगेशन",
   "legal": "कानूनी",
   "privacyPolicy": "गोपनीयता नीति",
@@ -82,35 +83,35 @@
   "fullName": "पूरा नाम",
   "password": "पासवर्ड",
   "createAccount": "खाता बनाएं",
-  "creatingAccount": "खाता बना रहा है...",
+  "creatingAccount": "खाता बनाया जा रहा है...",
   "backToPortalSelection": "पोर्टल चयन पर वापस",
   "registrationFailed": "पंजीकरण विफल",
   "loginFailed": "लॉगिन विफल",
-  "loggingIn": "लॉग इन कर रहा है...",
+  "loggingIn": "लॉग इन किया जा रहा है...",
   "Admin Login": "एडमिन लॉगिन",
   "Admin Registration": "एडमिन पंजीकरण",
   "Farmer Login": "किसान लॉगिन",
   "Farmer Registration": "किसान पंजीकरण",
   "Market Login": "बाजार लॉगिन",
-  "Market Registration": "बाazar पंजीकरण",
+  "Market Registration": "बाजार पंजीकरण",
   "Retailer Login": "खुदरा विक्रेता लॉगिन",
   "Retailer Registration": "खुदरा विक्रेता पंजीकरण",
-  "adminLoginDesc": "प्रशासनिक डैशबोर्ड تک رسائی حاصل کریں۔",
-  "adminRegisterDesc": "फार्मलिंक प्लेटफॉर्म کا انتظام کرنے के लिए ایک खाता बनाएं।",
-  "farmerLoginDesc": "اپنی उपज اور کمائی کا انتظام करने के लिए ਆਪਣੇ ڈیش بورڈ तक رسائی حاصل کریں۔",
-  "farmerRegisterDesc": "अपनी उपज और کمائی کا انتظام करने के लिए ایک खाता बनाएं।",
-  "marketLoginDesc": "बाजार संचालन کی نگرانی करने के लिए apne डैशबोर्ड تک رسائی حاصل کریں۔",
-  "marketRegisterDesc": "बाजार संचालन اور रसद کی نگرانی کرنے के लिए ایک खाता बनाएं।",
-  "retailerLoginDesc": "उपज ब्राउज़ करने और ऑर्डर دینے کے लिए apne डैशबोर्ड تک رسائی حاصل کریں۔",
-  "retailerRegisterDesc": "उपज ब्राउज़ करने और ऑर्डर देने के लिए ایک खाता बनाएं।",
-  "alreadyHaveAccount": "पहले से ही एक खाता है?",
-  "dontHaveAccount": "कोई खाता नहीं है?",
+  "adminLoginDesc": "प्रशासनिक डैशबोर्ड तक पहुंचें।",
+  "adminRegisterDesc": "फार्मलिंक प्लेटफॉर्म का प्रबंधन करने के लिए एक खाता बनाएं।",
+  "farmerLoginDesc": "अपनी उपज और कमाई का प्रबंधन करने के लिए अपने डैशबोर्ड तक पहुंचें।",
+  "farmerRegisterDesc": "अपनी उपज और कमाई का प्रबंधन करने के लिए एक खाता बनाएं।",
+  "marketLoginDesc": "बाजार संचालन की निगरानी करने के लिए अपने डैशबोर्ड तक पहुंचें।",
+  "marketRegisterDesc": "बाजार संचालन और रसद की निगरानी करने के लिए एक खाता बनाएं।",
+  "retailerLoginDesc": "उपज ब्राउज़ करने और ऑर्डर देने के लिए अपने डैशबोर्ड तक पहुंचें।",
+  "retailerRegisterDesc": "उपज ब्राउज़ करने और ऑर्डर देने के लिए एक खाता बनाएं।",
+  "alreadyHaveAccount": "पहले से खाता है?",
+  "dontHaveAccount": "खाता नहीं है?",
   "registerHere": "यहां पंजीकरण करें",
   "loginHere": "यहां लॉग इन करें",
   "myAccount": "मेरा खाता",
   "profile": "प्रोफ़ाइल",
   "support": "समर्थन",
-  "logout": "लॉग आउट करें",
+  "logout": "लॉग आउट",
   "overview": "अवलोकन",
   "myProduceListings": "मेरी उपज सूची",
   "myProduceListingsDesc": "अपनी उपज सूची प्रबंधित करें।",
@@ -121,11 +122,11 @@
   "paymentsEarnings": "भुगतान और कमाई",
   "alerts": "अलर्ट",
   "farmerDashboard": "किसान डैशबोर्ड",
-  "farmerDashboardDesc": "वापस स्वागत है! यहाँ आपकी खेती کی سرگرمیوں کا ایک جائزہ ہے۔",
+  "farmerDashboardDesc": "वापस स्वागत है! यहाँ आपकी खेती की गतिविधियों का एक सिंहावलोकन है।",
   "goToPage": "पेज पर जाएं",
   "addNewListing": "नई लिस्टिंग जोड़ें",
   "errorLoadingListings": "लिस्टिंग लोड करने में त्रुटि",
- "errorMustBeLoggedIn": "आपको अपनी लिस्टिंग देखने के लिए लॉग इन होना चाहिए।",
+  "errorMustBeLoggedIn": "आपको अपनी लिस्टिंग देखने के लिए लॉग इन होना चाहिए।",
   "errorFailedToFetchListings": "डेटाबेस से लिस्टिंग लाने में विफल।",
   "kg": "किलो",
   "available": "उपलब्ध",
@@ -133,3 +134,5 @@
   "noProduceListed": "आपने अभी तक कोई उपज सूचीबद्ध नहीं की है।",
   "addYourFirstListing": "अपनी पहली लिस्टिंग जोड़ें"
 }
+
+    
