--- a/src/locales/pa.json
+++ b/src/locales/pa.json
@@ -1,55 +1,56 @@
+
 {
   "features": "ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ",
   "portals": "ਪੋਰਟਲ",
   "contactUs": "ਸਾਡੇ ਨਾਲ ਸੰਪਰਕ ਕਰੋ",
   "heroSubtitle": "AI-ਸੰਚਾਲਿਤ ਖੇਤੀਬਾੜੀ ਬਜ਼ਾਰ",
   "heroTitle": "ਖੇਤਾਂ ਨੂੰ ਬਜ਼ਾਰਾਂ ਨਾਲ ਜੋੜਨਾ, ਨਿਰਵਿਘਨ।",
-  "heroDescription": "ਫਾਰਮਲਿੰਕ ਇੱਕ ਆਲ-इन-ਵਨ ਪਲੇਟફਾਰਮ ਹੈ ਜੋ ਕਿਸਾਨਾਂ, ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾਵਾਂ ਅਤੇ ਸਥਾਨਕ ਬਾਜ਼ਾਰਾਂ ਨੂੰ ਵਧੇरे ਕੁਸ਼ਲ ਅਤੇ ਨਿਰਪੱਖ ਖੇਤੀਬਾੜੀ ਵਾताਵਰਣ ਲਈ AI-ਸੰਚਾਲਿਤ ਸੂਝ ਨਾਲ ਸ਼ਕਤੀ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ।",
+  "heroDescription": "ਫਾਰਮਲਿੰਕ ਇੱਕ ਆਲ-ਇਨ-ਵਨ ਪਲੇਟਫਾਰਮ ਹੈ ਜੋ ਕਿਸਾਨਾਂ, ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾਵਾਂ ਅਤੇ ਸਥਾਨਕ ਬਾਜ਼ਾਰਾਂ ਨੂੰ ਵਧੇਰੇ ਕੁਸ਼ਲ ਅਤੇ ਨਿਰਪੱਖ ਖੇਤੀਬਾੜੀ ਵਾਤਾਵਰਣ ਲਈ AI-ਸੰਚਾਲਿਤ ਸੂਝ ਨਾਲ ਸ਼ਕਤੀ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ।",
   "getStarted": "ਸ਼ੁਰੂ ਕਰੋ",
   "learnMore": "ਹੋਰ ਜਾਣੋ",
   "featuresTitle": "ਵਪਾਰ ਕਰਨ ਦਾ ਇੱਕ ਚੁਸਤ ਤਰੀਕਾ",
-  "featuresDescription": "ਸਾਡੇ ਸ਼ਕਤੀਸ਼ਾਲੀ AI ਟੂਲ ਅਤੇ ਪਾਰਦਰਸ਼ੀ ਬਜ਼ਾਰ ਤੁਹਾਨੂੰ prospérer ਕਰਨ ਲਈ ਲੋੜੀਂਦੀ ਹਰ ਚੀਜ਼ ਪ੍ਰਦਾਨ ਕਰਦੇ ਹਨ।",
+  "featuresDescription": "ਸਾਡੇ ਸ਼ਕਤੀਸ਼ਾਲੀ AI ਟੂਲ ਅਤੇ ਪਾਰਦਰਸ਼ੀ ਬਜ਼ਾਰ ਤੁਹਾਨੂੰ ਖੁਸ਼ਹਾਲ ਹੋਣ ਲਈ ਲੋੜੀਂਦੀ ਹਰ ਚੀਜ਼ ਪ੍ਰਦਾਨ ਕਰਦੇ ਹਨ।",
   "aiPriceAdvisor": "AI ਕੀਮਤ ਸਲਾਹਕਾਰ",
-  "featurePriceAdvisorDesc": "ਗੁਣਵੱਤਾ ਅਤੇ ਅਸਲ-ਸਮੇਂ ਦੇ ਬਾਜ਼ਾਰ ਡੇਟਾ ਦੇ ਅਧਾਰ ਤੇ اپنی ਉਪજ ਲਈ ਉਚਿਤ ਕੀਮਤ ਸਿਫਾਰਸ਼ਾਂ ਪ੍ਰਾप्त ਕਰਨ ਲਈ AI ਦਾ ਲਾਭ ਉठाਓ।",
+  "featurePriceAdvisorDesc": "ਗੁਣਵੱਤਾ ਅਤੇ ਅਸਲ-ਸਮੇਂ ਦੇ ਬਾਜ਼ਾਰ ਡੇਟਾ ਦੇ ਅਧਾਰ ਤੇ ਆਪਣੀ ਉਪਜ ਲਈ ਉਚਿਤ ਕੀਮਤ ਸਿਫਾਰਸ਼ਾਂ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ AI ਦਾ ਲਾਭ ਉਠਾਓ।",
   "realTimeMarketData": "ਅਸਲ-ਸਮੇਂ ਦਾ ਬਾਜ਼ਾਰ ਡੇਟਾ",
-  "featureMarketDataDesc": "ਜਾਣਕਾਰੀ ਭਰਪੂਰ ਵਿਕਰੀ ਅਤੇ ਖਰੀਦ ਫੈਸਲੇ ਲੈਣ ਲਈ ਅਪ-ટੂ-ਦ-ਮિનਟ ਬਾਜ਼ਾਰ ਕੀਮਤਾਂ ਅਤੇ ਰੁझਾਨਾਂ ਤੱਕ ਪਹੁੰਚ ਕਰੋ।",
-  "supplyChainOptimization": "ਸਪਲਾਈ ਚੇਨ ਅਨुकूलन",
-  "featureSupplyChainDesc": "ਸਾਡਾ AI ਕੂੜੇ ਨੂੰ ਘੱਟ ਕਰਨ ਲਈ ਸਭ ਤੋਂ ਕੁਸ਼ਲ ਵੰਡ ਰਣਨੀਤੀਆਂ ਦੀ ਸਿਫਾਰਸ਼ ਕਰਨ ਲਈ ਸਪਲਾਈ ਅਤੇ ਮੰગ ਦਾ ਵਿਸ਼ਲੇਸ਼ણ ਕਰਦਾ ਹੈ।",
-  "personalizedDeals": "ਵਿਅਕਤੀਗਤ ਸੌदे",
-  "featurePersonalizedDealsDesc": "ਪ੍ਰچੂਨ ਵਿਕਰੇਤਾਵਾਂ ਨੂੰ ਉਨ੍ਹਾਂ ਦੇ ਖਰੀਦ ઇતિહાસ ਦੇ ਅਧਾਰ ਤੇ सर्वोत्तम ਸੌدਿਆਂ ਲਈ AI-ਸੰਚਾਲਿਤ ਸਿਫਾਰਸ਼ਾਂ ਪ੍ਰਾप्त ਹੁੰਦੀਆਂ ਹਨ।",
-  "directConnections": "ਸਿੱਧੇ కనెక్షన్",
-  "featureDirectConnectionsDesc": "ਇੱਕ ਪਾਰਦਰਸ਼ੀ ਬਜ਼ਾਰ જો ਕਿਸਾਨਾਂ ਨੂੰ ਸਿੱਧੇ ਪ੍ਰچੂਨ ਵਿਕਰੇਤਾਵਾਂ ਅਤੇ ਸਥਾਨਕ ਬਾਜ਼ਾਰਾਂ ਨਾਲ ਜੋੜਦਾ ਹੈ, ਭਾਈਚਾਰੇ ਨੂੰ ਉਤਸ਼ਾहित ਕਰਦਾ ਹੈ।",
+  "featureMarketDataDesc": "ਜਾਣਕਾਰੀ ਭਰਪੂਰ ਵਿਕਰੀ ਅਤੇ ਖਰੀਦ ਫੈਸਲੇ ਲੈਣ ਲਈ ਅਪ-ਟੂ-ਦ-ਮਿੰਟ ਬਾਜ਼ਾਰ ਕੀਮਤਾਂ ਅਤੇ ਰੁਝਾਨਾਂ ਤੱਕ ਪਹੁੰਚ ਕਰੋ।",
+  "supplyChainOptimization": "ਸਪਲਾਈ ਚੇਨ ਅਨੁਕੂਲਨ",
+  "featureSupplyChainDesc": "ਸਾਡਾ AI ਕੂੜੇ ਨੂੰ ਘੱਟ ਕਰਨ ਲਈ ਸਭ ਤੋਂ ਕੁਸ਼ਲ ਵੰਡ ਰਣਨੀਤੀਆਂ ਦੀ ਸਿਫਾਰਸ਼ ਕਰਨ ਲਈ ਸਪਲਾਈ ਅਤੇ ਮੰਗ ਦਾ ਵਿਸ਼ਲੇਸ਼ਣ ਕਰਦਾ ਹੈ।",
+  "personalizedDeals": "ਵਿਅਕਤੀਗਤ ਸੌਦੇ",
+  "featurePersonalizedDealsDesc": "ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾਵਾਂ ਨੂੰ ਉਨ੍ਹਾਂ ਦੇ ਖਰੀਦ ਇਤਿਹਾਸ ਦੇ ਅਧਾਰ ਤੇ ਸਭ ਤੋਂ ਵਧੀਆ ਸੌਦਿਆਂ ਲਈ AI-ਸੰਚਾਲਿਤ ਸਿਫਾਰਸ਼ਾਂ ਪ੍ਰਾਪਤ ਹੁੰਦੀਆਂ ਹਨ।",
+  "directConnections": "ਸਿੱਧੇ ਕਨੈਕਸ਼ਨ",
+  "featureDirectConnectionsDesc": "ਇੱਕ ਪਾਰਦਰਸ਼ੀ ਬਜ਼ਾਰ ਜੋ ਕਿਸਾਨਾਂ ਨੂੰ ਸਿੱਧੇ ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾਵਾਂ ਅਤੇ ਸਥਾਨਕ ਬਾਜ਼ਾਰਾਂ ਨਾਲ ਜੋੜਦਾ ਹੈ, ਭਾਈਚਾਰੇ ਨੂੰ ਉਤਸ਼ਾਹਿਤ ਕਰਦਾ ਹੈ।",
   "aiPoweredAssistants": "AI-ਸੰਚਾਲਿਤ ਸਹਾਇਕ",
-  "featureAIAssistantsDesc": "ਸਾਡੇ ਪਲੇਟਫارم-ਵ्यापी FAQ ਬੋਟ ਅਤੇ ਕਿਸਾਨਾਂ ਲਈ ਵਿਸ਼ੇਸ਼ ਖੇਤੀ-ਸਹਾਇਕ ਨਾਲ ਆਪਣੇ سوالوں ਦੇ ਤੁਰੰਤ ਜਵਾਬ ਪ੍ਰਾપ્ત ਕਰੋ।",
+  "featureAIAssistantsDesc": "ਸਾਡੇ ਪਲੇਟਫਾਰਮ-ਵਿਆਪੀ FAQ ਬੋਟ ਅਤੇ ਕਿਸਾਨਾਂ ਲਈ ਵਿਸ਼ੇਸ਼ ਖੇਤੀ-ਸਹਾਇਕ ਨਾਲ ਆਪਣੇ ਸਵਾਲਾਂ ਦੇ ਤੁਰੰਤ ਜਵਾਬ ਪ੍ਰਾਪਤ ਕਰੋ।",
   "aiPoweredAssistance": "AI-ਸੰਚਾਲਿਤ ਸਹਾਇਤਾ",
   "aiShowcaseTitle": "ਤੁਹਾਡਾ ਖੇਤੀਬਾੜੀ ਮਾਹਰ ਇੱਥੇ ਹੈ, 24/7",
-  "aiShowcaseDesc": "ਫਾਰਮਲਿੰਕ ਤੁਰੰਤ ਸਹਾਇਤਾ ਅਤੇ ਮਾਹਰ ਸਲਾਹ ਪ੍ਰਦਾਨ ਕਰਨ ਲਈ অত্যাধুনিক AI ਨੂੰ ਏਕੀਕ੍ਰित ਕਰਦਾ ਹੈ। ਭਾਵੇਂ ਤੁਸੀਂ ਫसल ਸਲਾਹ ਦੀ ਲੋੜ ਵਾਲੇ ਕਿਸਾਨ ਹੋ ਜਾਂ ਪਲੇਟਫارم ਦੀ ਖੋਜ ਕਰਨ ਵਾਲੇ ਨਵੇਂ ਉਪਭੋਗਤਾ ਹੋ, ਸਾਡੇ AI ਸਹਾਇਕ ਮਦਦ ਕਰਨ ਲਈ ਇੱਥੇ ਹਨ।",
+  "aiShowcaseDesc": "ਫਾਰਮਲਿੰਕ ਤੁਰੰਤ ਸਹਾਇਤਾ ਅਤੇ ਮਾਹਰ ਸਲਾਹ ਪ੍ਰਦਾਨ ਕਰਨ ਲਈ ਅਤਿ ਆਧੁਨਿਕ AI ਨੂੰ ਏਕੀਕ੍ਰਿਤ ਕਰਦਾ ਹੈ। ਭਾਵੇਂ ਤੁਸੀਂ ਫਸਲ ਸਲਾਹ ਦੀ ਲੋੜ ਵਾਲੇ ਕਿਸਾਨ ਹੋ ਜਾਂ ਪਲੇਟਫਾਰਮ ਦੀ ਖੋਜ ਕਰਨ ਵਾਲੇ ਨਵੇਂ ਉਪਭੋਗਤਾ ਹੋ, ਸਾਡੇ AI ਸਹਾਇਕ ਮਦਦ ਕਰਨ ਲਈ ਇੱਥੇ ਹਨ।",
   "agriAssistant": "ਖੇਤੀ-ਸਹਾਇਕ",
-  "agriAssistantDesc": "ਕੀੜੇ-ਮਕੌੜਿਆਂ ਦੇ ਨਿਯੰਤਰਣ ਤੋਂ ਲੈ ਕੇ ਬਾਜ਼ਾਰ ਦੇ ਰੁझਾਨਾਂ ਤੱਕ, ਆਪਣੇ ખેતી ਦੇ ਸਵਾਲਾਂ ਦੇ ਮਾਹਰ ਜਵਾਬ ਪ੍ਰਾप्त ਕਰੋ।",
-  "platformFaqBot": "ਪਲੇਟਫارم FAQ ਬੋટ",
-  "platformFaqBotDesc": "ਕਿਸੇ ਵਿਸ਼ੇਸ਼ਤਾ ਬਾਰੇ کوئی سوال ਹੈ? ਸਾਡਾ FAQ ਬੋਟ ਤੁਰੰਤ ਜਵਾਬ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ।",
-  "askAboutCrops": "ਆਪਣੀਆਂ ਫਸਲਾਂ ਬਾਰੇ ਇੱਕ سوال ਪੁੱਛੋ...",
-  "agriAssistantInitialMessage": "ਨમસ્તે! ਤੁਹਾਡਾ ਖੇਤੀਬਾੜੀ ਮਾਹਰ ਇੱਥੇ ਹੈ, 24/7। ਮੈਨੂੰ ਆਪਣੀਆਂ ਫਸਲਾਂ ਬਾਰੇ ਪੁੱਛੋ।",
+  "agriAssistantDesc": "ਕੀੜੇ-ਮਕੌੜਿਆਂ ਦੇ ਨਿਯੰਤਰਣ ਤੋਂ ਲੈ ਕੇ ਬਾਜ਼ਾਰ ਦੇ ਰੁਝਾਨਾਂ ਤੱਕ, ਆਪਣੇ ਖੇਤੀ ਦੇ ਸਵਾਲਾਂ ਦੇ ਮਾਹਰ ਜਵਾਬ ਪ੍ਰਾਪਤ ਕਰੋ।",
+  "platformFaqBot": "ਪਲੇਟਫਾਰਮ FAQ ਬੋਟ",
+  "platformFaqBotDesc": "ਕਿਸੇ ਵਿਸ਼ੇਸ਼ਤਾ ਬਾਰੇ ਕੋਈ ਸਵਾਲ ਹੈ? ਸਾਡਾ FAQ ਬੋਟ ਤੁਰੰਤ ਜਵਾਬ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ।",
+  "askAboutCrops": "ਆਪਣੀਆਂ ਫਸਲਾਂ ਬਾਰੇ ਇੱਕ ਸਵਾਲ ਪੁੱਛੋ...",
+  "agriAssistantInitialMessage": "ਨਮਸਤੇ! ਤੁਹਾਡਾ ਖੇਤੀਬਾੜੀ ਮਾਹਰ ਇੱਥੇ ਹੈ, 24/7। ਮੈਨੂੰ ਆਪਣੀਆਂ ਫਸਲਾਂ ਬਾਰੇ ਪੁੱਛੋ।",
   "howItWorksTitle": "3 ਆਸਾਨ ਕਦਮਾਂ ਵਿੱਚ ਸ਼ੁਰੂਆਤ ਕਰੋ",
-  "howItWorksDesc": "ਸਾਡੇ ਨੈટવર્ક ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਣਾ ਸਧਾਰਨ ਅਤੇ ਤੇਜ਼ ਹੈ।",
+  "howItWorksDesc": "ਸਾਡੇ ਨੈਟਵਰਕ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਣਾ ਸਧਾਰਨ ਅਤੇ ਤੇਜ਼ ਹੈ।",
   "howItWorksStep1Title": "ਇੱਕ ਖਾਤਾ ਬਣਾਓ",
   "howItWorksStep1Desc": "ਆਪਣਾ ਪੋਰਟਲ ਚੁਣੋ ਅਤੇ ਕਿਸਾਨ, ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾ, ਜਾਂ ਬਾਜ਼ਾਰ ਪ੍ਰਬੰਧਕ ਵਜੋਂ ਰਜਿਸਟਰ ਕਰੋ।",
-  "howItWorksStep2Title": "ਆਪਣੇ ਡੈਸ਼ਬੋਰడ్ ਦੀ ਪੜਚੋਲ ਕਰੋ",
-  "howItWorksStep2Desc": "ਆਪਣੀ ਭੂਮਿਕਾ ਦੇ ਅਨੁਕੂਲ ਸ਼ਕਤੀਸ਼ਾਲੀ ਟੂਲਸ ਤੱਕ ਪਹੁੰch ਕਰੋ, ਉਪજ ਦੀ ਸੂਚੀ ਤੋਂ ਲੈ ਕੇ ਡੇਟਾ ਦਾ ਵਿਸ਼ਲੇषण ਕਰਨ ਤੱਕ।",
-  "howItWorksStep3Title": "ਲెਣ-देਣ ਸ਼ੁਰੂ ਕਰੋ",
+  "howItWorksStep2Title": "ਆਪਣੇ ਡੈਸ਼ਬੋਰਡ ਦੀ ਪੜਚੋਲ ਕਰੋ",
+  "howItWorksStep2Desc": "ਆਪਣੀ ਭੂਮਿਕਾ ਦੇ ਅਨੁਕੂਲ ਸ਼ਕਤੀਸ਼ਾਲੀ ਟੂਲਸ ਤੱਕ ਪਹੁੰਚ ਕਰੋ, ਉਪਜ ਦੀ ਸੂਚੀ ਤੋਂ ਲੈ ਕੇ ਡੇਟਾ ਦਾ ਵਿਸ਼ਲੇਸ਼ਣ ਕਰਨ ਤੱਕ।",
+  "howItWorksStep3Title": "ਲੈਣ-ਦੇਣ ਸ਼ੁਰੂ ਕਰੋ",
   "howItWorksStep3Desc": "ਭਾਈਵਾਲਾਂ ਨਾਲ ਜੁੜੋ, ਵਿਕਰੀ ਕਰੋ, ਆਰਡਰ ਦਿਓ, ਅਤੇ ਆਪਣੇ ਕਾਰੋਬਾਰ ਨੂੰ ਵਧਾਓ।",
   "testimonialsTitle": "ਭਾਈਚਾਰੇ ਦੁਆਰਾ ਭਰੋਸੇਯੋਗ",
-  "testimonial1Quote": "ਫਾਰਮਲਿੰਕ ਨੇ ਮੇਰੇ ਉਪਜ ਵੇਚਣ ਦੇ ਤਰੀਕੇ ਵਿੱਚ ਕ੍ਰਾਂਤੀ ਲਿਆ ਦਿੱਤੀ ਹੈ। AI ਕੀਮਤ ਸਲਾਹਕਾਰ ਮੈਨੂੰ ਹਰ ਵਾਰ सर्वोत्तम ਕੀਮਤ ਪ੍ਰਾप्त ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰਦਾ ਹੈ।",
+  "testimonial1Quote": "ਫਾਰਮਲਿੰਕ ਨੇ ਮੇਰੇ ਉਪਜ ਵੇਚਣ ਦੇ ਤਰੀਕੇ ਵਿੱਚ ਕ੍ਰਾਂਤੀ ਲਿਆ ਦਿੱਤੀ ਹੈ। AI ਕੀਮਤ ਸਲਾਹਕਾਰ ਮੈਨੂੰ ਹਰ ਵਾਰ ਸਭ ਤੋਂ ਵਧੀਆ ਕੀਮਤ ਪ੍ਰਾਪਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰਦਾ ਹੈ।",
   "testimonial1Role": "ਕਿਸਾਨ, ਗੁਜਰਾਤ",
-  "testimonial2Quote": "ਉੱਚ-ਗੁણવੱਤਾ ਵਾਲੀ, ਸਥਾਨਕ ਉਪજ ਲੱਭਣਾ ਇੰਨਾ ਆਸਾਨ ਕਦੇ ਨਹੀਂ ਰਿਹਾ। ਸਿਫਾਰਸ਼ ਕੀਤੇ ਸੌਦੇ ਮੇਰੇ ਸਮੇਂ ਅਤੇ ਪੈਸੇ ਦੀ ਬचत ਕਰਦੇ ਹਨ।",
-  "testimonial2Role": "ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾ, ਮੁੰબਈ",
+  "testimonial2Quote": "ਉੱਚ-ਗੁਣਵੱਤਾ ਵਾਲੀ, ਸਥਾਨਕ ਉਪਜ ਲੱਭਣਾ ਇੰਨਾ ਆਸਾਨ ਕਦੇ ਨਹੀਂ ਰਿਹਾ। ਸਿਫਾਰਸ਼ ਕੀਤੇ ਸੌਦੇ ਮੇਰੇ ਸਮੇਂ ਅਤੇ ਪੈਸੇ ਦੀ ਬਚਤ ਕਰਦੇ ਹਨ।",
+  "testimonial2Role": "ਪ੍ਰਚੂਨ ਵਿਕਰੇਤਾ, ਮੁੰਬਈ",
   "testimonial3Quote": "ਖੇਤੀ-ਸਹਾਇਕ ਚੈਟਬੋਟ ਸ਼ਾਨਦਾਰ ਹੈ। ਇਹ 24/7 ਮੇਰੀ ਜੇਬ ਵਿੱਚ ਇੱਕ ਖੇਤੀ ਮਾਹਰ ਹੋਣ ਵਰਗਾ ਹੈ। ਮੈਨੂੰ ਹਰ ਚੀਜ਼ 'ਤੇ ਤੁਰੰਤ ਸਲਾਹ ਮਿਲਦੀ ਹੈ।",
-  "testimonial3Role": "ਕਿਸਾਨ, ਪੁಣೆ",
+  "testimonial3Role": "ਕਿਸਾਨ, ਪੁਣੇ",
   "getInTouch": "ਸੰਪਰਕ ਵਿੱਚ ਰਹੋ",
-  "getInTouchDesc": "ਕੀ ਤੁਹਾਡੇ ਕੋਈ سوال ਜਾਂ ਫੀਡਬੈਕ ਹਨ? ਸਾਨੂੰ ਤੁਹਾਡੇ ਤੋਂ ਸੁਣਨਾ ਚੰਗਾ ਲੱਗੇਗਾ।",
+  "getInTouchDesc": "ਕੀ ਤੁਹਾਡੇ ਕੋਈ ਸਵਾਲ ਜਾਂ ਫੀਡਬੈਕ ਹਨ? ਸਾਨੂੰ ਤੁਹਾਡੇ ਤੋਂ ਸੁਣਨਾ ਚੰਗਾ ਲੱਗੇਗਾ।",
   "contactForm": "ਸੰਪਰਕ ਫਾਰਮ",
-  "contactFormDesc": "ਹੇਠਾਂ ਦਿੱਤੇ ਫਾਰਮ ਨੂੰ ਭરો ਅਤੇ ਅਸੀਂ ਜਲਦੀ ਤੋਂ ਜਲਦੀ ਤੁਹਾਡੇ ਨਾਲ ਸੰਪਰਕ ਕਰਾਂਗੇ।",
-  "name": "ਨਾમ",
+  "contactFormDesc": "ਹੇਠਾਂ ਦਿੱਤੇ ਫਾਰਮ ਨੂੰ ਭਰੋ ਅਤੇ ਅਸੀਂ ਜਲਦੀ ਤੋਂ ਜਲਦੀ ਤੁਹਾਡੇ ਨਾਲ ਸੰਪਰਕ ਕਰਾਂਗੇ।",
+  "name": "ਨਾਮ",
   "yourName": "ਤੁਹਾਡਾ ਨਾਮ",
   "email": "ਈਮੇਲ",
   "message": "ਸੁਨੇਹਾ",
@@ -72,7 +73,7 @@
   "login": "ਲੌਗ ਇਨ ਕਰੋ",
   "farmLinkFaq": "ਫਾਰਮਲਿੰਕ FAQ",
   "askAboutFarmLink": "ਫਾਰਮਲਿੰਕ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਬਾਰੇ ਪੁੱਛੋ...",
-  "faqBotInitialMessage": "ਨમસ્તે! ਮੈਂ ਅੱਜ ਫਾਰਮਲਿੰਕ ਬਾਰੇ ਜਾਣਨ ਵਿੱਚ ਤੁਹਾਡੀ ਕਿਵੇਂ ਮਦਦ ਕਰ ਸਕਦਾ ਹਾਂ?",
+  "faqBotInitialMessage": "ਨਮਸਤੇ! ਮੈਂ ਅੱਜ ਫਾਰਮਲਿੰਕ ਬਾਰੇ ਜਾਣਨ ਵਿੱਚ ਤੁਹਾਡੀ ਕਿਵੇਂ ਮਦਦ ਕਰ ਸਕਦਾ ਹਾਂ?",
   "navigation": "ਨੇਵੀਗੇਸ਼ਨ",
   "legal": "ਕਾਨੂੰਨੀ",
   "privacyPolicy": "ਗੋਪਨੀਯਤਾ ਨੀਤੀ",
@@ -114,7 +115,6 @@
   "overview": "ਸੰਖੇਪ ਜਾਣਕਾਰੀ",
   "myProduceListings": "ਮੇਰੀ ਉਪਜ ਸੂਚੀ",
   "myProduceListingsDesc": "ਆਪਣੀ ਉਪਜ ਸੂਚੀਆਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ।",
-  "aiPriceAdvisor": "AI ਕੀਮਤ ਸਲਾਹਕਾਰ",
   "marketPriceSuggestions": "ਬਾਜ਼ਾਰ ਕੀਮਤ ਸੁਝਾਅ",
   "dailyMarketPrices": "ਰੋਜ਼ਾਨਾ ਬਾਜ਼ਾਰ ਕੀਮਤਾਂ",
   "ordersReceived": "ਪ੍ਰਾਪਤ ਆਰਡਰ",
@@ -126,10 +126,10 @@
   "addNewListing": "ਨਵੀਂ ਸੂਚੀ ਸ਼ਾਮਲ ਕਰੋ",
   "errorLoadingListings": "ਸੂਚੀਆਂ ਨੂੰ ਲੋਡ ਕਰਨ ਵਿੱਚ ਗਲਤੀ",
   "errorMustBeLoggedIn": "ਤੁਹਾਨੂੰ ਆਪਣੀਆਂ ਸੂਚੀਆਂ ਨੂੰ ਵੇਖਣ ਲਈ ਲੌਗ ਇਨ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ।",
-  "errorFailedToFetchListings": "ਡੇਟਾਬੇਸ ਤੋਂ ਸੂਚੀਆਂ ਪ੍ਰਾप्त ਕਰਨ ਵਿੱਚ ਅਸਫਲ।",
+  "errorFailedToFetchListings": "ਡੇਟਾਬੇਸ ਤੋਂ ਸੂਚੀਆਂ ਪ੍ਰਾਪਤ ਕਰਨ ਵਿੱਚ ਅਸਫਲ।",
   "kg": "ਕਿਲੋ",
   "available": "ਉਪਲਬਧ",
   "editListing": "ਸੂਚੀ ਸੰਪਾਦਿਤ ਕਰੋ",
-  "noProduceListed": "ਤੁਸੀਂ ਹજી ਤੱਕ ਕੋਈ ਉਪਜ ਸੂਚੀਬદ્ધ ਨਹੀਂ ਕੀਤੀ ਹੈ।",
+  "noProduceListed": "ਤੁਸੀਂ ਹੁਣ ਤੱਕ ਕੋਈ ਉਪਜ ਸੂਚੀਬੱਧ ਨਹੀਂ ਕੀਤੀ ਹੈ।",
   "addYourFirstListing": "ਆਪਣੀ ਪਹਿਲੀ ਸੂਚੀ ਸ਼ਾਮਲ ਕਰੋ"
 }
